# wayle

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  config.toml  schema.json  test_config.toml
.cargo/: config.toml
docs/config/modules/: clock.md
modules/: laptop.toml
src/: config.rs  core.rs  docs.rs  lib.rs  main.rs  runtime_state.rs  service_manager.rs  tracing_config.rs
src/cli/: formatting.rs  mod.rs  registry.rs  service.rs  types.rs
src/cli/commands/: mod.rs
src/cli/commands/audio/: devices.rs  mod.rs  mute.rs  volume.rs
src/cli/commands/config/: get.rs  mod.rs  set.rs  watch.rs
src/cli/commands/media/: active.rs  info.rs  list.rs  loop_mode.rs  mod.rs  next.rs  play_pause.rs  previous.rs  seek.rs  shuffle.rs  utils.rs
src/cli/tests/: mod.rs
src/config/: battery.rs  clock.rs  error.rs  general.rs  loading.rs  media.rs  mod.rs  modules.rs  paths.rs  styling.rs
src/config/clock/: button.rs  dropdown.rs  general.rs  mod.rs  styling.rs
src/config/general/: log_level.rs  mod.rs
src/config/loading/: circular_detection.rs  file_creation.rs  merging.rs  mod.rs
src/config/tests/: mod.rs
src/config_runtime/: broadcast.rs  diff.rs  file_watching.rs  mod.rs  path_ops.rs  runtime.rs
src/config_store/: broadcast.rs  changes.rs  diff.rs  file_watcher.rs  file_watching.rs  mod.rs  path_ops.rs  store.rs
src/config_store/tests/: changes.rs  mod.rs
src/core/: mod.rs
src/docs/: generator.rs  markdown.rs  mod.rs  module.rs  registry.rs  schema.rs
src/services/: mod.rs
src/services/audio/: core.rs  device.rs  error.rs  events.rs  mod.rs  pulse.rs  service.rs  stream.rs  test_pulse.rs  tokio_mainloop.rs  volume.rs
src/services/audio/backend/: commands.rs  conversion.rs  events.rs  mod.rs  types.rs
src/services/audio/device/: control.rs  info.rs  mod.rs
src/services/audio/discovery/: device.rs  server.rs  stream.rs
src/services/audio/stream/: control.rs  info.rs  mod.rs
src/services/audio/volume/: mod.rs
src/services/common/: macros.rs  mod.rs  property.rs  types.rs
src/services/media/: error.rs  mod.rs  monitoring.rs  service.rs
src/services/mpris/: adapter.rs  control.rs  core.rs  discovery.rs  error.rs  metadata.rs  mod.rs  monitoring.rs  mpris.rs  player_management.rs  player_manager.rs  proxy.rs  service.rs  state.rs  streams.rs  types.rs  utils.rs
src/services/mpris/control/: actions.rs  mod.rs
src/services/mpris/controller/: actions.rs
src/services/mpris/core/: mod.rs
src/services/mpris/management/: active.rs  mod.rs
src/services/mpris/models/: mod.rs  player.rs
src/services/mpris/monitoring/: mod.rs  player.rs
src/services/mpris/player/: control.rs  discovery.rs  events.rs  handle.rs  info.rs  manager.rs  metadata.rs  mod.rs  (+4 more)
src/services/network/: error.rs  mod.rs  service.rs
src/services/network_manager/: discovery.rs  error.rs  mod.rs  monitoring.rs  service.rs
src/services/pulse/: backend.rs  error.rs  events.rs  mod.rs  test_pulse.rs
tests/: config_store.rs
themes/: base.toml  dark.toml
(+174 files in other folders)
