[package]
name = "wayle"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
thiserror = "2.0.12"
schemars = { version = "0.9.0", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.0", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"

module_name_repetitions = "allow"
similar_names = "allow"

unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

cognitive_complexity = "warn"
too_many_lines = "warn"

missing_errors_doc = "warn"
missing_panics_doc = "warn"
