[package]
name = "wayle"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0"
thiserror = "2"
schemars = { version = "0", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0", features = ["derive"] }
notify = "8"
tokio = { version = "1", features = ["full"] }
regex = "1"
futures = "0"
relm4 = { version = "0" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"

module_name_repetitions = "allow"
similar_names = "allow"

unwrap_used = "forbid"
expect_used = "forbid"
panic = "warn"

cognitive_complexity = "warn"
too_many_lines = "warn"

missing_errors_doc = "warn"
missing_panics_doc = "warn"
