[package]
name = "wayle"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0"
thiserror = "2"
schemars = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0", features = ["derive"] }
notify = "8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0", features = ["sync"] }
regex = "1"
futures = "0"
relm4 = { version = "0" }
async-trait = "0.1"
zbus = "5"
async-stream = "0.3"
libpulse-binding = "2.28"
libc = "0.2"
chrono = { version = "0.4", features = ["clock"] }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "pulse_full_test"
required-features = []

[[example]]
name = "mpris_player_ui"
path = "examples/mpris_player_ui/main.rs"
required-features = []

[[bin]]
name = "mpris-debug"
path = "tools/mpris-debug.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"

module_name_repetitions = "allow"
similar_names = "allow"


unwrap_used = "deny"
expect_used = "deny"
panic = "warn"

cognitive_complexity = "warn"
too_many_lines = "warn"

missing_errors_doc = "warn"
missing_panics_doc = "warn"
